Adiciona busca paginada, adiciona dto resumido do contratante